style.css
body {
    background-color:black;
}

h1 {
    color:grey;
}

.maindiv {
    background-color: white;
    color: black;
    width: 500px;
    height: 300px;
    padding: 20px;
    border-radius: 25px;

    font-family: Arial, Helvetica, sans-serif;
    
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;

    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);

    overflow: auto;
    transition: height 0.3s;
}

.maindiv div {
    width: 80%;

    text-align: center;
}

.large {
    height: 500px;
}

#result span {
    color: orangered;
}

button {
    padding: 15px 20px;
    border: 1px solid white;
    color: white;
    background-color: black;
    cursor: pointer;
    outline: none;
}

